force-app/main/default/objects/TicTocEvent__e/TicTocEvent__e.object-meta.xml
<CustomObject>
    <label>TicTocEvent</label>
    <pluralLabel>TicTocEvents</pluralLabel>
</CustomObject>