force-app/main/default/objects/TicTocEvent__e/fields/action__c.field-meta.xml
<CustomField>
    <fullName>action__c</fullName>
    <label>action</label>
    <length>20</length>
    <type>Text</type>
</CustomField>