force-app/main/default/objects/TicTocEvent__e/fields/corditnate__c.field-meta.xml
<CustomField>
    <fullName>corditnate__c</fullName>
    <label>corditnate</label>
    <length>10</length>
    <type>Text</type>
</CustomField>