force-app/main/default/objects/TicTocEvent__e/fields/Game_Id__c.field-meta.xml
<CustomField>
    <fullName>Game_Id__c</fullName>
    <label>Game_Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>