force-app/main/default/objects/TicTocEvent__e/fields/PlayerName__c.field-meta.xml
<CustomField>
    <fullName>PlayerName__c</fullName>
    <label>PlayerName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>