force-app/main/default/objects/TicTocEvent__e/fields/SenderGameId__c.field-meta.xml
<CustomField>
    <fullName>SenderGameId__c</fullName>
    <label>SenderGameId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>